--- a/styles/sass/_helpers.scss
+++ b/styles/sass/_helpers.scss
@@ -145,10 +145,10 @@
 
 // camden fringe colour
 .camden-fringe-colour {
-  color: $pink;
+  color: $camden-fringe;
 
   &:hover {
-    color: $pink;
+    color: $camden-fringe;
   }
 }
 .vault-festival-colour {
