--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -220,8 +220,8 @@
   }
 
   &.camden-fringe-colour {
-    color: $pink;
-    border-color: $pink;
+    color: $camden-fringe;
+    border-color: $camden-fringe;
 
     &:hover {
       color: $link;
