--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -6,7 +6,7 @@ $link: #53FACE;
 $black: #222;
 $yellow: #ffe21f;
 $red: #dd2e44;
-$pink: #ff00b0;
+$camden-fringe: #fe0000;
 $vault-festival: #ef24f9;
 $croydonites-festival: #aaa;
 $space: 20px;
