--- a/styles/style.css
+++ b/styles/style.css
@@ -752,22 +752,33 @@ html, body {
 
 body {
   font-family: "Avenir Next", Avenir, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, sans-serif;
-  background: url("../images/bg.png") #1c1c1c no-repeat;
+  font-weight: 500;
+  background: #111 no-repeat;
   background-size: cover;
   line-height: 1.5;
   color: #fff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  transform: translateZ(0);
 }
 
 h1 {
-  font-size: 3em;
-  font-weight: 200;
+  font-size: 3.2em;
+  font-weight: 600;
   line-height: 1.2;
+  letter-spacing: -0.02em;
+}
+
+.h1--giga {
+  font-size: 6em;
+  line-height: 1;
+  font-weight: 700;
 }
 
 h2,
 .text--h2 {
   font-size: 1.8em;
-  font-weight: 200;
+  font-weight: 500;
 }
 h2 small,
 .text--h2 small {
@@ -775,16 +786,32 @@ h2 small,
   line-height: 1;
 }
 
+.h2--giga {
+  font-size: 2.8em;
+  font-weight: 600;
+  line-height: 1.4;
+}
+.h2--giga em {
+  font-weight: 600;
+}
+
 h3,
 .text--h3 {
   font-size: 1.4em;
-  font-weight: 200;
+  font-weight: 400;
   line-height: 1.6;
 }
 
-h1 strong,
+h3 + h3 {
+  margin-top: 10px;
+}
+
+h1 strong {
+  font-weight: 600;
+}
+
 h2 strong {
-  font-weight: 200;
+  font-weight: 500;
 }
 
 strong {
@@ -793,20 +820,6 @@ strong {
 
 small {
   display: block;
-}
-
-.text--bigger {
-  font-size: 1.125em;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-weight: 500;
-}
-.text--bigger strong {
-  font-weight: 500;
-}
-
-.text--yellow {
-  color: #ffe21f;
 }
 
 .text h2,
@@ -818,6 +831,7 @@ small {
 button {
   background: transparent;
   font-family: "Avenir Next", Avenir, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, sans-serif;
+  font-weight: 500;
   color: #fff;
   cursor: pointer;
   outline: none;
@@ -872,6 +886,20 @@ ul {
   overflow: hidden;
 }
 
+.no-margin {
+  margin: 0;
+  padding: 0;
+}
+
+.display--inline-block {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.display--block {
+  display: block;
+}
+
 .hide {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -909,15 +937,42 @@ ul {
   text-align: center;
 }
 
+.text--bigger {
+  font-size: 1.125em;
+}
+
+.text--biggest {
+  font-size: 1.5em;
+}
+
 .text--grey {
   color: #666;
 }
 
+.text--white {
+  color: #fff;
+}
+
+.text--yellow {
+  color: #ffe21f;
+}
+
+.text--light-grey {
+  color: #ccc;
+}
+
 .text--section {
   text-transform: uppercase;
-  font-weight: 500;
-  letter-spacing: 0.1em;
+  font-size: .875em;
+  font-weight: 700;
+  color: #ccc;
+  letter-spacing: .4em;
   padding: 10px 0;
+}
+
+.text--emphasis {
+  font-weight: 600;
+  text-decoration: underline;
 }
 
 .has-rectangle {
@@ -929,6 +984,12 @@ ul {
 .no-link-colour.camden-fringe-colour,
 .no-link-colour.vault-festival-colour {
   color: #fff;
+}
+
+.no-list-styling {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .position--relative {
@@ -943,8 +1004,6 @@ ul {
 
 .opacity--50,
 .opacity--70 {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   -webkit-text-stroke: 0.35px;
   -moz-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
@@ -1016,6 +1075,46 @@ ul {
   background: #dd2e44;
 }
 
+header[class^="header--"] {
+  font-size: 0.875em;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: .4em;
+  padding: 20px;
+  display: inline-block;
+  position: relative;
+}
+header[class^="header--"]:before {
+  content: '';
+  width: 160px;
+  display: block;
+  background: inherit;
+  height: 4px;
+  position: absolute;
+  left: -160px;
+  top: 45%;
+}
+
+.hidden {
+  opacity: 0;
+}
+
+.header--purple {
+  background: #bd10e0;
+}
+
+.header--red {
+  background: #dd2e44;
+}
+
+.header--orange {
+  background: #f5a623;
+}
+
+.header--green {
+  background: #3bc5a6;
+}
+
 .fill-height-or-more {
   min-height: 100%;
   display: flex;
@@ -1067,12 +1166,28 @@ ul {
   float: left;
 }
 
+.max-width--1200 {
+  max-width: 1200px;
+}
+
 .max-width--980 {
   max-width: 980px;
 }
 
+.max-width--850 {
+  max-width: 850px;
+}
+
+.max-width--700 {
+  max-width: 700px;
+}
+
 .max-width--650 {
   max-width: 650px;
+}
+
+.max-width--600 {
+  max-width: 600px;
 }
 
 .width--70 {
@@ -1093,6 +1208,10 @@ ul {
 
 .padding--top-bottom-one-space {
   padding: 20px 0;
+}
+
+.padding--top-bottom-six-spaces {
+  padding: 120px 0;
 }
 
 .padding--top-half-space {
@@ -1119,12 +1238,24 @@ ul {
   padding-bottom: 80px;
 }
 
+.padding--bottom-eight-spaces {
+  padding-bottom: 160px;
+}
+
 .padding--left-one-space {
   padding-left: 20px;
 }
 
 .padding--left-two-spaces {
   padding-left: 40px;
+}
+
+.padding--left-three-spaces {
+  padding-left: 60px;
+}
+
+.padding--left-four-spaces {
+  padding-left: 80px;
 }
 
 .padding--right-one-space {
@@ -1179,6 +1310,14 @@ ul {
   margin-top: 120px;
 }
 
+.margin--top-eight-spaces {
+  margin-top: 160px;
+}
+
+.margin--top-ten-spaces {
+  margin-top: 200px;
+}
+
 .iphone-screenshot {
   max-width: 358px;
   position: relative;
@@ -1199,27 +1338,26 @@ ul {
 
 .button {
   color: #fff;
-  border: solid 2px #fff;
+  background: #dd2e44;
+  border: solid 2px #dd2e44;
   padding: 13.33333px;
   display: block;
   text-align: center;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
+  cursor: pointer;
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
   -moz-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 .button:hover {
-  color: #53FACE;
-  border-color: #53FACE;
+  color: #dd2e44;
+  background: transparent;
   text-decoration: none;
 }
-.button.button--download {
-  width: 260px;
-}
-.button.button--claim {
+.button.button--download, .button.button--claim {
   width: 260px;
 }
 .button.camden-fringe-colour {
@@ -1231,11 +1369,13 @@ ul {
   border-color: #53FACE;
 }
 .button.vault-festival-colour {
-  color: #ef24f9;
+  color: #fff;
+  background: #ef24f9;
   border-color: #ef24f9;
 }
 .button.vault-festival-colour:hover {
   color: #f46efb;
+  background: transparent;
   border-color: #f46efb;
 }
 
@@ -1282,6 +1422,62 @@ ul {
   vertical-align: -15%;
 }
 
+.logo--invest {
+  position: relative;
+}
+.logo--invest .text--section {
+  display: block;
+  position: absolute;
+  top: -20px;
+  left: 60px;
+}
+.logo--invest b span {
+  vertical-align: 35%;
+  font-size: 1.7em;
+  padding-left: 5px;
+}
+
+.scroll-text {
+  position: absolute;
+  left: 0;
+}
+
+.has-bg-image--masthead {
+  background: url("../images/masthead.jpg") no-repeat;
+  background-size: 120% 120%;
+  height: 100%;
+}
+.has-bg-image--masthead h1, .has-bg-image--masthead h2 {
+  text-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
+}
+
+.has-bg-image--nyc {
+  background: url("../images/nyc.jpg") no-repeat;
+  background-size: cover;
+  background-position: 50% 0;
+}
+
+.has-bg-image--money {
+  background: url("../images/money.jpg") no-repeat;
+  background-size: cover;
+  background-position: 50% 0;
+}
+
+.has-bg-image--gradient {
+  background: #222;
+  position: relative;
+  overflow: hidden;
+}
+
+.invest-app-screenshot {
+  position: absolute;
+  top: 0;
+  right: 50%;
+  left: 50%;
+  transform: translateX(20%);
+  width: 600px;
+}
+
 nav {
   position: absolute;
   right: 0;
@@ -1297,14 +1493,58 @@ nav .current {
   text-decoration: none !important;
 }
 
+.columns--4 > * {
+  width: 23.625%;
+  display: inline-block;
+  vertical-align: top;
+}
+.columns--4 > *:nth-child(n) {
+  margin-right: 1%;
+  margin-bottom: 0.5%;
+}
+.columns--4 > *:nth-child(4n), .columns--4 > *:last-child {
+  margin-right: 0;
+  margin-bottom: 0;
+}
+@media (max-width: 850px) {
+  .columns--4 > * {
+    width: 47.25%;
+  }
+  .columns--4 > *:nth-child(n) {
+    margin-right: 3%;
+    margin-bottom: 1.5%;
+  }
+  .columns--4 > *:nth-child(2n), .columns--4 > *:last-child {
+    margin-right: 0;
+    margin-bottom: 0;
+  }
+  .columns--4 > *:not(:last-child) {
+    padding-bottom: 60px;
+  }
+}
+@media (max-width: 380px) {
+  .columns--4 > * {
+    width: 97.5%;
+    padding-bottom: 3%;
+  }
+  .columns--4 > *:nth-child(n) {
+    margin-right: 0;
+    margin-bottom: 0;
+  }
+  .columns--4 > *:nth-child(1n), .columns--4 > *:last-child {
+    margin-right: 0;
+    margin-bottom: 0;
+  }
+}
+
 .columns--3 > * {
-  width: 29.16667%;
+  width: 30.5%;
   display: inline-block;
   vertical-align: top;
 }
 .columns--3 > *:nth-child(n) {
-  margin-right: 5%;
-  margin-bottom: 2.5%;
+  margin-right: 3%;
+  margin-bottom: 1.5%;
 }
 .columns--3 > *:nth-child(3n), .columns--3 > *:last-child {
   margin-right: 0;
@@ -1371,6 +1611,12 @@ nav .current {
   }
 }
 
+@media all and (min-width: 1440px) {
+  header[class^="header--"]:before {
+    width: 25px;
+    left: -25px;
+  }
+}
 @media all and (min-width: 1200px) {
   .max-width--980 {
     max-width: 1100px;
