--- a/styles/sass/_columns.scss
+++ b/styles/sass/_columns.scss
@@ -43,16 +43,10 @@
 
   // breakpoint where 3 columns should become 2 columns
   @media (max-width: 850px) {
-    @include rows(2, 3%);
+    @include rows(1, 3%);
     &:not(:last-child) {
-      padding-bottom: $space * 3;
+      padding-bottom: $space;
     }
-  }
-
-  // breakpoint where 2 columns should become 1 column
-  @media (max-width: 380px) {
-    @include rows(1, 0);
-    padding-bottom: 3%;
   }
 }
 
