--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -352,6 +352,7 @@
   background: url('../images/masthead.jpg') no-repeat;
   background-size: 120% 120%;
   height: 100%;
+
   h1, h2 {
     text-shadow: 0 10px 15px rgba(0,0,0,.3);
   }
@@ -375,6 +376,7 @@
   overflow: hidden;
 }
 
+// app screeshot from investors page
 .invest-app-screenshot {
   position: absolute;
   top: 0;
@@ -382,4 +384,18 @@
   left: 50%;
   transform: translateX(20%);
   width: 600px;
+
+  // gradient to hide edges
+  &:after {
+    content: '';
+    width: 80px;
+    height: 100%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(34,34,34,1) 60%);
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(34,34,34,1) 60%);
+    background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(34,34,34,1) 60%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#222222',GradientType=1 );
+  }
 }
