--- a/styles/sass/_responsive.scss
+++ b/styles/sass/_responsive.scss
@@ -199,6 +199,11 @@
     display: block;
     margin: 0 auto;
   }
+
+  // invest image
+  .invest-app-screenshot {
+    display: none;
+  }
 }
 
 
@@ -215,6 +220,37 @@
   .text--h2,
   h3 {
     font-weight: 400;
+  }
+
+  .h1--giga {
+    font-size: 3em;
+  }
+  .h2--giga {
+    font-size: 2em;
+  }
+  .has-bg-image--masthead .h2--giga {
+    font-size: 1.5em;
+    text-align: center;
+  }
+
+  // position iphone correctly for investor page
+  .has-bg-image--masthead {
+    background-position: 50% 0;
+    background-size: auto 560px;
+
+    &:before {
+      content: '';
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,.3);
+      position: absolute;
+    }
+  }
+
+  // smaller header section separators
+  header[class^="header--"] {
+    font-size: 0.7em;
+    padding: $space / 2 $space;
   }
 
   // smaller width for screenshot
