--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -354,7 +354,7 @@
   height: 100%;
 
   h1, h2 {
-    text-shadow: 0 10px 15px rgba(0,0,0,.3);
+    text-shadow: 2px 10px 15px rgba(0,0,0,.3);
   }
 }
 
@@ -397,5 +397,54 @@
     background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(34,34,34,1) 60%);
     background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(34,34,34,1) 60%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#222222',GradientType=1 );
+  }
+}
+
+// headers from investors page
+header[class^="header--"] {
+  font-size: 0.875em;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: .4em;
+  padding: $space;
+  display: inline-block;
+  position: relative;
+  margin-left: -$space;
+
+  &:before {
+    content: '';
+    width: 160px;
+    display: block;
+    background: inherit;
+    height: 4px;
+    position: absolute;
+    left: -160px;
+    top: 45%;
+  }
+}
+
+// date from milestones
+.date {
+  font-size: 0.75em;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: .4em;
+  color: $black;
+  background: #999;
+  padding: 2px 4px 2px 20px;
+  margin-left: -$space;
+  position: relative;
+
+  &:before {
+    content: '';
+    background: -moz-linear-gradient(top, rgba(153,153,153,1) 0%, rgba(255,255,255,0) 100%);
+    background: -webkit-linear-gradient(top, rgba(153,153,153,1) 0%,rgba(255,255,255,0) 100%);
+    background: linear-gradient(to bottom, rgba(153,153,153,1) 0%,rgba(255,255,255,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#999999', endColorstr='#00ffffff',GradientType=0 );
+    width: 2px;
+    height: 50px;
+    position: absolute;
+    left: 0;
+    top: 15px;
   }
 }
