--- a/styles/style.css
+++ b/styles/style.css
@@ -1075,26 +1075,6 @@ ul {
   background: #dd2e44;
 }
 
-header[class^="header--"] {
-  font-size: 0.875em;
-  text-transform: uppercase;
-  font-weight: 700;
-  letter-spacing: .4em;
-  padding: 20px;
-  display: inline-block;
-  position: relative;
-}
-header[class^="header--"]:before {
-  content: '';
-  width: 160px;
-  display: block;
-  background: inherit;
-  height: 4px;
-  position: absolute;
-  left: -160px;
-  top: 45%;
-}
-
 .hidden {
   opacity: 0;
 }
@@ -1448,7 +1428,7 @@ header[class^="header--"]:before {
   height: 100%;
 }
 .has-bg-image--masthead h1, .has-bg-image--masthead h2 {
-  text-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
+  text-shadow: 2px 10px 15px rgba(0, 0, 0, 0.3);
 }
 
 .has-bg-image--nyc {
@@ -1488,6 +1468,51 @@ header[class^="header--"]:before {
   background: -webkit-linear-gradient(left, transparent 0%, #222222 60%);
   background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, #222222 60%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#222222',GradientType=1 );
+}
+
+header[class^="header--"] {
+  font-size: 0.875em;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: .4em;
+  padding: 20px;
+  display: inline-block;
+  position: relative;
+  margin-left: -20px;
+}
+header[class^="header--"]:before {
+  content: '';
+  width: 160px;
+  display: block;
+  background: inherit;
+  height: 4px;
+  position: absolute;
+  left: -160px;
+  top: 45%;
+}
+
+.date {
+  font-size: 0.75em;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: .4em;
+  color: #222;
+  background: #999;
+  padding: 2px 4px 2px 20px;
+  margin-left: -20px;
+  position: relative;
+}
+.date:before {
+  content: '';
+  background: -moz-linear-gradient(top, #999999 0%, rgba(255, 255, 255, 0) 100%);
+  background: -webkit-linear-gradient(top, #999999 0%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(to bottom, #999999 0%, rgba(255, 255, 255, 0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#999999', endColorstr='#00ffffff',GradientType=0 );
+  width: 2px;
+  height: 50px;
+  position: absolute;
+  left: 0;
+  top: 15px;
 }
 
 nav {
@@ -1605,7 +1630,7 @@ nav .current {
     margin-bottom: 0;
   }
   .columns--2 > *:not(:last-child) {
-    padding-bottom: 60px;
+    padding-bottom: 20px;
   }
 }
 
@@ -1782,14 +1807,31 @@ nav .current {
     display: block;
     margin: 0 auto;
   }
-
-  .invest-app-screenshot {
-    display: none;
-  }
 }
 @media all and (max-width: 380px) {
+  body {
+    font-size: .75em;
+  }
+
+  .logo--invest b span {
+    vertical-align: 65%;
+  }
+
+  .has-bg-image--masthead .max-width--700 {
+    margin-top: 30%;
+  }
+
   a {
     color: #05af82;
+  }
+
+  .padding--top-bottom-six-spaces {
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
+
+  .columns--3 .svg {
+    width: 50px;
   }
 
   h1,
@@ -1797,20 +1839,19 @@ nav .current {
   h2,
   .text--h2,
   h3 {
-    font-weight: 400;
+    font-weight: 500;
   }
 
   .h1--giga {
-    font-size: 3em;
+    font-size: 3.5em;
   }
 
   .h2--giga {
-    font-size: 2em;
+    font-size: 1.5em;
   }
 
-  .has-bg-image--masthead .h2--giga {
-    font-size: 1.5em;
-    text-align: center;
+  .text--bigger {
+    line-height: 1.6;
   }
 
   .has-bg-image--masthead {
@@ -1821,8 +1862,15 @@ nav .current {
     content: '';
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.45);
     position: absolute;
+  }
+  .has-bg-image--masthead .h2--giga {
+    font-size: 1.8em;
+    text-align: center;
+  }
+  .has-bg-image--masthead h1, .has-bg-image--masthead h2 {
+    text-shadow: 2px 3px 10px black;
   }
 
   header[class^="header--"] {
