video section added

--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -9,7 +9,7 @@ $yellow: #ffe21f;
 $red: #dd2e44;
 $purple: #bd10e0;
 $green: #3bc5a6;
-$orange: #f5a623;
+$orange: #ecaa3d;
 $camden-fringe: #fe0000;
 $vault-festival: #ef24f9;
 $croydonites-festival: #aaa;
