--- a/styles/style.css
+++ b/styles/style.css
@@ -1088,7 +1088,7 @@ ul {
 }
 
 .header--orange {
-  background: #f5a623;
+  background: #ecaa3d;
 }
 
 .header--green {
@@ -1522,8 +1522,8 @@ header[class^="header--"]:before {
   display: block;
   content: '\25B6';
   position: absolute;
-  bottom: 180%;
-  left: 32%;
+  bottom: 140%;
+  left: 58%;
   font-size: 3em;
   text-align: center;
   padding-top: 8px;
