--- a/styles/sass/_responsive.scss
+++ b/styles/sass/_responsive.scss
@@ -269,7 +269,7 @@
     }
 
     // centre the investor video link in masthead
-    .inverstor-video--link {
+    .investor-video--link {
       text-align: center;
       margin-top: 20px;
     }
@@ -286,7 +286,7 @@
   }
 
   // height of iframe smaller
-  .inverstor-video--iframe {
+  .investor-video--iframe {
     height: 200px;
   }
 
