I’m going through changeeeeees

--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -56,7 +56,7 @@ body {
   color: $text;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  transform: translateZ(0);
+  // transform: translateZ(0);
 }
 
 
