VAULT Festival update webpage

--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -11,7 +11,7 @@ $purple: #bd10e0;
 $green: #3bc5a6;
 $orange: #ecaa3d;
 $camden-fringe: #fe0000;
-$vault-festival: #ef24f9;
+$vault-festival: #e40346;
 $croydonites-festival: #aaa;
 $space: 20px;
 
