--- a/styles/sass/_animations.scss
+++ b/styles/sass/_animations.scss
@@ -138,6 +138,12 @@
   100% {@include opacity(1); width: 20%;}
 }
 
+@include keyframes(pulse-bg) {
+  0% {@include box-shadow (0 0 0 rgba(221,46,68,0))}
+  50%   {@include box-shadow (0 0 100px rgba(221,46,68,.4))}
+  100% {@include box-shadow (0 0 0 rgba(221,46,68,0))}
+}
+
 
 
 
@@ -147,4 +153,11 @@
 // top container (info/results)
 .container__top, .result-container {
   @include animation(0, .3s, moveDown);
+}
+
+.pulse-bg {
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  animation: pulse-bg 5s linear infinite;
+  -webkit-animation: pulse-bg 5s linear infinite;
 }
