--- a/styles/sass/_helpers.scss
+++ b/styles/sass/_helpers.scss
@@ -96,6 +96,9 @@
 .text--yellow {
   color: $yellow;
 }
+.text--red {
+  color: $red;
+}
 .text--light-grey {
   color: $light-text;
 }
@@ -176,6 +179,10 @@
   @include opacity(.7);
 }
 
+.less-opacity-on-hover > *:hover {
+  @include opacity(.7);
+  @include transitions;
+}
 
 
 // for small button
