--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -79,6 +79,9 @@
 .max-width--850 {
   max-width: 850px;
 }
+.max-width--800 {
+  max-width: 800px;
+}
 .max-width--700 {
   max-width: 700px;
 }
@@ -121,6 +124,9 @@
 }
 .padding--top-two-spaces {
   padding-top: $space * 2;
+}
+.padding--top-four-spaces {
+  padding-top: $space * 4;
 }
 .padding--top-six-spaces {
   padding-top: $space * 6;
@@ -199,6 +205,13 @@
 }
 .margin--top-ten-spaces {
   margin-top: $space * 10;
+}
+
+.margin--left-one-space {
+  margin-left: $space;
+}
+.margin--right-one-space {
+  margin-right: $space;
 }
 
 
