--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -155,10 +155,12 @@
   padding-left: $space * 4;
 }
 
+.padding--right-half-space {
+  padding-right: $space / 2;
+}
 .padding--right-one-space {
   padding-right: $space;
 }
-
 
 
 
