--- a/styles/style.css
+++ b/styles/style.css
@@ -1350,6 +1350,10 @@ ul {
   padding-left: 80px;
 }
 
+.padding--right-half-space {
+  padding-right: 10px;
+}
+
 .padding--right-one-space {
   padding-right: 20px;
 }
