--- a/styles/style.css
+++ b/styles/style.css
@@ -978,8 +978,8 @@ ul {
 }
 
 .no-margin {
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 .display--inline-block {
