--- a/styles/sass/_responsive.scss
+++ b/styles/sass/_responsive.scss
@@ -61,6 +61,12 @@
   h3 {
     font-size: 1.5em;
   }
+  .h1--giga {
+    font-size: 4em;
+  }
+  .h2--giga {
+    font-size: 2.5em;
+  }
 
   // less top spacing
   .margin--top-four-spaces {
@@ -99,6 +105,9 @@
     font-size: 1.8em;
     text-align: center;
   }
+  h2 {
+    text-align: center;
+  }
   h2,
   .text--h2,
   h3 {
@@ -107,6 +116,12 @@
     small {
       font-size: .6em;
     }
+  }
+  .h1--giga {
+    font-size: 3em;
+  }
+  .h2--giga {
+    font-size: 2em;
   }
   .text--bigger {
     line-height: 1.4;
@@ -253,7 +268,6 @@
   h3 {
     font-weight: 500;
   }
-
   .h1--giga {
     font-size: 3.5em;
   }
