--- a/styles/style.css
+++ b/styles/style.css
@@ -1028,6 +1028,10 @@ ul {
   text-align: center;
 }
 
+.text--right {
+  text-align: right;
+}
+
 .text--bigger {
   font-size: 1.125em;
 }
@@ -1068,6 +1072,10 @@ ul {
 .text--emphasis {
   font-weight: 600;
   text-decoration: underline;
+}
+
+.text--strong {
+  font-weight: 600;
 }
 
 .has-rectangle {
@@ -1138,6 +1146,10 @@ ul {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
+}
+
+.border--opacity-35 {
+  border-color: rgba(255, 255, 255, 0.35);
 }
 
 .border--opacity-25 {
@@ -1356,6 +1368,10 @@ ul {
 
 .padding--right-one-space {
   padding-right: 20px;
+}
+
+.margin--bottom-one-space {
+  margin-bottom: 20px;
 }
 
 .margin--bottom-four-spaces {
@@ -1935,6 +1951,14 @@ nav .current {
     font-size: 1.5em;
   }
 
+  .h1--giga {
+    font-size: 4em;
+  }
+
+  .h2--giga {
+    font-size: 2.5em;
+  }
+
   .margin--top-four-spaces {
     margin-top: 40px;
   }
@@ -1961,6 +1985,10 @@ nav .current {
     text-align: center;
   }
 
+  h2 {
+    text-align: center;
+  }
+
   h2,
   .text--h2,
   h3 {
@@ -1970,6 +1998,14 @@ nav .current {
   .text--h2 small,
   h3 small {
     font-size: .6em;
+  }
+
+  .h1--giga {
+    font-size: 3em;
+  }
+
+  .h2--giga {
+    font-size: 2em;
   }
 
   .text--bigger {
