--- a/styles/sass/_helpers.scss
+++ b/styles/sass/_helpers.scss
@@ -210,6 +210,10 @@
   border-color: rgba(255,255,255,.25);
 }
 
+.background--light-grey-10 {
+  background: rgba(255,255,255,.1);
+}
+
 // camden fringe colour
 .camden-fringe-colour {
   color: $camden-fringe;
