--- a/styles/style.css
+++ b/styles/style.css
@@ -1156,6 +1156,10 @@ ul {
   border-color: rgba(255, 255, 255, 0.25);
 }
 
+.background--light-grey-10 {
+  background: rgba(255, 255, 255, 0.1);
+}
+
 .camden-fringe-colour {
   color: #fe0000;
 }
