changed iphone photo + small css changes

--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -6,7 +6,7 @@ $dark-grey: #666;
 $link: #53FACE;
 $black: #222;
 $yellow: #ffe21f;
-$red: #dd2e44;
+$red: #eb1234;
 $purple: #bd10e0;
 $green: #3bc5a6;
 $orange: #ecaa3d;
