small button css changes

--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -246,6 +246,7 @@
   color: $text;
   background: $red;
   border: solid 2px $red;
+  font-weight: 600;
   padding: $space / 1.5;
   display: block;
   text-align: center;
