--- a/styles/style.css
+++ b/styles/style.css
@@ -1461,6 +1461,7 @@ ul {
   color: #fff;
   background: #eb1234;
   border: solid 2px #eb1234;
+  font-weight: 600;
   padding: 13.33333px;
   display: block;
   text-align: center;
