--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -60,6 +60,21 @@ body {
 }
 
 
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-bottom: $space * 2;
+  font-size: .875em;
+}
+td, th {
+  border: 1px solid $dark-grey;
+  text-align: left;
+  padding: $space / 2;
+}
+tr:nth-child(odd) {
+  background-color: $black;
+}
+
 
 
 
