--- a/styles/sass/_responsive.scss
+++ b/styles/sass/_responsive.scss
@@ -101,13 +101,17 @@
 
 // MOBILE
 @media all and (max-width: 850px) {
+  .container {
+    padding: 0 5%;
+  }
+
   h1 {
     font-size: 1.8em;
-    text-align: center;
+    // text-align: center;
   }
-  h2 {
-    text-align: center;
-  }
+  // h2 {
+    // text-align: center;
+  // }
   h2,
   .text--h2,
   h3 {
@@ -228,6 +232,10 @@
   .iphone-screenshot {
     display: block;
     margin: 0 auto;
+  }
+
+  td, th {
+    padding: $space / 4 $space / 8;
   }
 }
 
