Camden Fringe 2018 page changes

--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -10,7 +10,7 @@ $red: #eb1234;
 $purple: #bd10e0;
 $green: #3bc5a6;
 $orange: #ecaa3d;
-$camden-fringe: #fe0000;
+$camden-fringe: #9e4fc6;
 $vault-festival: #e40346;
 $croydonites-festival: #aaa;
 $space: 20px;
